--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Lobster|Marck+Script|Oswald|Roboto|Tenor+Sans" rel="stylesheet">
 	<script type="text/javascript" src="script.js"></script>
 	<link rel="stylesheet" type="text/css" href="style.css">
-	<script src="http://code.jquery.com/jquery-1.8.3.js"></script>
+	<script src="https://code.jquery.com/jquery-1.8.3.js"></script>
 </head>
 <body>
 	<div class="mainwrp">
